style.css
/* css reset */
*, *::before, *::after {
box-sizing: border-box;
}

img, picture, svg, video {
display: block;
max-width: 100%;
}

input, textarea, button, select {
font: inherit;
}

* {
margin: 0;
padding: 0;
}
:root{
    --primary-color: #ea8512;
    --bg-color: #fbf6f0;
    --primary-brown: #783c29;
    --primary-yellow: #ffbc0b;
}
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: var(--bg-color);
min-height: 100vh;
}

nav{
    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.255);
    display: flex;
    flex-direction: column;
    padding-bottom: 0.5em;
    background-color: white;
}
nav > span{
    font-size: 1.75rem;
    font-weight: bold;
    text-align: center;
    color: var(--primary-color);
    margin-bottom: 0.5em;
}
nav > button {
    font-size: 1.5rem;
    background-color: transparent;
    border: none;
    font-weight: 700;
    cursor: pointer;
    margin-bottom: 0.25em;
    outline: none;
}

main {
    margin: 1em auto;
    background-color: white;
    border-radius: 10px;
    padding: 0.25em 0.57em;
    max-width: 90%;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.255);
}

.home h1 {
    font-size: 2.5rem;
}
.home p{
    font-size: 1.25rem;
    font-weight: 700;
    opacity: 0.7;
}

.home button {
    padding: 0.25em 1em;
    border-radius: 5px;
    font-weight: bold;
    font-size: 1.25rem;
    background-color: var(--primary-yellow);
    border: none;
    margin: 0.5em auto;
    cursor: pointer;
}

footer {
    color: white;
    background-color: black;
    font-weight: bold;
    font-size: 1.25rem;
    text-align: center;
    padding: 0.5em 0;
}
footer > img{
    width: auto;
    height: 1.4rem;
    display: inline;
    margin: 0 0.25em;
}
.menu{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.menu-item{
    /* border: 1px solid black; */
    border-radius: 15px;
    margin: 0.5em 0;
    padding-bottom: 0.5em;
    width: 90%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
   
}

.menu-item > p{
    font-weight: bold;
    font-size: 1.25rem;
    border-radius: 5px;
    margin-top: 0.5em;
    padding: 0.125em 0.5em;
    background-color: var(--primary-yellow);
}

.contact {
    font-size: 1.25rem;
}
.contact > div {
    margin: 1.25em 0;
}

@media (min-width : 800px){
    #content{
        min-height: 100vh;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
    nav{
        flex-direction: row;
        align-items: center;
    }
   nav  button {
    margin: 0 1.125em;
    font-size: 1.75rem;
    padding: 0.25em 0.5em;
   }
   nav > button:hover{
    border-radius: 5px;
    background-color: var(--primary-yellow);
   }
   nav span{
   margin-right: auto;
   margin-left: 0.5em;
   margin-top: 0.5em;
   font-size: 2.5rem;
   }
   .home{
    display: flex;
    justify-content: space-around;
    padding: 3em 3em;
    gap: 10vw;
   }
   .home h1 {
    font-size: 4.5rem;
}
 .home p{
    font-size: 2rem;
 }
 .home button{
    font-size: 1.5rem;
 }
 
.menu{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
}
.contact img{
    max-height: 450px;
    width: auto;
}
}

